# skills-desktop

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: CHANGELOG.md  INSTALLATION.md  PROJECT_SUMMARY.md  README_EN.md  RELEASE_NOTES.md  REMOTE_INIT.md  UPGRADE_GUIDE.md  task.md
scripts/: generate-icons.js  update-version.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/layout/: Navbar.tsx  Sidebar.tsx
src/pages/: Marketplace.tsx  MySkills.tsx  Settings.tsx
src/store/: useSkillStore.ts
src/types/: index.ts
